# exc

C/: .gitignore
C++/: .gitignore
C++/01extern_C/: .gitignore  c_main.c  c_wrapper.cpp  c_wrapper.h  note  test_class.cpp  test_main.cpp
C++/02stdlib/string/: test.cpp
C++/02stdlib/threading/: lock.cpp  thread.cpp
C++/04size_of_array/: test.cpp
C++/05C_array_and_string_literal/: test.cpp
C++/06namespace/unnamed_namespace/: note  test_global.cpp  test_global.h  test_main.cpp
C++/06namespace/using_directive/: test.cpp
C++/07initialization/class/: test.cpp
C++/07initialization/struct_of_char_arrays/: test.cpp
C++/08class_with_callback/: main.c  test_class.cpp  wrapper.cpp
C++/09const/const_class_method/: test.cpp
C++/10constructors/copy_ctor_and_assign_oper/: test.cpp
C++/10constructors/ctor_in_base_class/: test.cpp
C++/10constructors/user_defined_ctor/: note  test.cpp
C++/10constructors/virtual_ctor/: test.cpp
C++/10constructors/virtual_ctor_idiom/: note  test.cpp
C++/11stl/allocator/: test.cpp
C++/11stl/map/: test.cpp
C++/11stl/pair/: test.cpp
C++/11stl/vector/: test.cpp
C++/12rvalue_reference/: test.cpp
C++/13nullptr/: test.cpp
C++/14template/variadic_template_and_callback/: test.cpp
C++/14template/variadic_template_class/: test.cpp
C++/14template/variadic_template_function/: test.cpp
C++/14template/variadic_template_of_containers/: test.cpp
C++/16normal_inheritance/virtual_pointer/: note  test.cpp
C++/17smart_pointer/shared_ptr/: test.cpp
C++/17smart_pointer/unique_ptr/: note  test.cpp
C++/18exceptions/catch_ellipsis/: test.cpp
C++/18exceptions/exception_across_binary/: a.cpp  a.h  b.cpp  b.h  build.sh  c.cpp
C++/18exceptions/noexcept_in_std_future/: test.cpp
C++/19cmake/cppzmq_test/: CMakeLists.txt
C++/19cmake/cppzmq_test/src/: CMakeLists.txt  client.cpp  server.cpp
C++/19cmake/sharedLibsDemo/: CMakeLists.txt
C++/19cmake/tutorial/: CMakeLists.txt
C++/19cmake/tutorial/src/: tutorial.cpp
C++/20destructors/private_destructor/: test.cpp
C/00temp/: test.c
C/01include_files/: file1.c  file2.c
C/02file_readwrite/: read_from_file.c  test.py  write_to_file.c
C/03clock_gettime_benchmark/: test.c  test2.c
C/04const/: file1.c  file2.c  file3.c
C/05inline/: file1.c  file2.c  header.h  note
C/06autotools/: configure.scan  hello.c
C/07openmpi/hello_world/: run.sh  test.c
C/08indirect_shared_lib/: a.cpp  b.cpp  test.sh
Models/: .gitignore
Python/: .gitignore  .gitignore.swp
Python/01cffi/: test_printf.py
Python/01cffi/C++_lib/: _wrapper_module.cpp  inline_abi.py  note  out-of-line_api.py  out-of-line_api_build.py
Python/01cffi/C++_lib_ver_2/: _wrapper_module.cpp  note  out-of-line_api_build.py  test_class.h
Python/01cffi/callback_test/: _wrapper_module.cpp  build.sh  cffi_build.py  cffi_test.py  cpp_main.cpp  data_structs.h  derived_class.cpp  derived_class.h  test_class.cpp  test_class.h  wrapper.cpp  wrapper.h
Python/01cffi/cdata_to_python/: _cffi_utils.py  benchmark.py  benchmark.py.lprof  test.py  test_shelve_2
Python/01cffi/multicharacter_literal/: _test_module.c  test.c  test.py
Python/01cffi/simple_tests/: test_printf.py
Python/01cffi/test_API/: test_build.py
Python/02xargs_test/: test.py
Python/03package_import/: note
Python/03package_import/a/: __init__.py
Python/04stdlib/argparse/: test.py
Python/04stdlib/configparser/: test.py
Python/04stdlib/contextlib/: exit_stack.py
Python/05closure/: note  test.py  test2.py
Python/05closure/basic_tests/: test.py  test2.py  test3.py  test4.py
Python/06yaml/: test.py
Python/07pytest/: conftest.py  note  test_class.py  test_exception.py  test_f.py
Python/07pytest/test/: test_exception_in_test.py  test_f_in_test.py
Python/08ply/simple_test/: lexer.py  parser.out  parser.py  parsetab.py  yacc.py
Python/09class/access_surrounding_scope/: test.py  test2.py
Python/09class/descriptor/: note
Python/09class/private_class_attribute/: test.py
Python/09class/super/: note  test.py
Python/10matplotlib/fill_outside/: use_path_patch.py
Python/10matplotlib/qt4_test/: test.py
Python/10matplotlib/use_with_multiprocesing/: test.py
Python/11flask/wsgi/: test.py
Python/12json/benchmark/: _data.py  json_test.py  ujson_test.py
Python/14numpy/copy_modes/: test.py
Python/14numpy/masked_arrays/: test.py
Python/14numpy/tutorial/: structured_arrays.py
Python/15pandas/groupby/: test.py
Python/15pandas/indexing/: advanced_indexing.py  basic_indexing.py
Python/15pandas/merging/: test.py
Python/15pandas/reshaping/: test.py
Python/15pandas/timeseries/: test.py
Python/15pandas/tutorial/: 10-min-tor.py  basic-functionality.py
Python/16pyzmq/asynchronous_client_server_pattern/: async_test.py
Python/16pyzmq/guide/: hello_world_client.py  pub_sub_client.py  pub_sub_server.py
Python/16pyzmq/simple_examples/: bind_has_no_queue_at_first.py  divide_and_conquer_task_generator.py  divide_and_conquer_worker.py  extended_pub_sub_broker_proxy_version.py  extended_pub_sub_client.py  pub_sub_client.py  pub_sub_server.py
Python/16pyzmq/simple_examples.py/: divide_and_conquer_result_collector.py  extended_pub_sub_server.py  hello_world_server.py  multiple_socket_reader_client.py
Python/16pyzmq/sockets/: multiple_socket_reader_client_poll_version.py
Python/16pyzmq/test/: dealerb.py  dealerc.py  pull.py  push.py  routerb.py  utils.py
Python/17yield/: test_send.py
Python/18unicode/: utils.py
Python/19pyside/backgroud_process_with_monitor/: gui.py
Python/19pyside/file_selection/: test.py
Python/19pyside/table_and_tree_widget/: table_populate_compare.py  tree_widget_test.py
Python/19pyside/zetcode_tutor/: basic_interface.py  confirm_close.py  grid_layout.py  grid_layout2.py  icon.py  menubar.py  tetris.py  tooltip.py
Python/20kivy/matplotlib_test/: simple_matplotlib_test.py
Python/21cython/tutorial/: setup.py
Python/22method_registry/: method_register_test.py  test.py
Python/23weakref/: test.py
Python/28print_tree/: print_file_tree.py
Python/30coroutine/: basic_test.py
(+69 files in other folders)
